--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<body>
 		<p>
-			<a href="page1.html">
+			<a href="./page1.html">
 				<img src="http://www.prestigeanimalhospital.com/sites/default/files/08-cat-cancer-4.jpeg"></img>
 				click here
 			</a>
