--- a/index.html
+++ b/index.html
@@ -2,32 +2,18 @@
 <html>
 	<body>
 		<p>
-			<a href="./page1.html">
-				<img src="http://www.prestigeanimalhospital.com/sites/default/files/08-cat-cancer-4.jpeg"></img>
-				click here
-			</a>
-			<table border="5">
-				<caption>My table</caption>
-				<thead>
-					<tr>
-						<th>row1</th>
-						<th>row2</th>
-					</tr>
-				</thead>
-				<tfoot>
-					<tr>
-						<td  colspan="2">Hello everyone</td>
-					</tr>
-				</tfoot>
-				<tbody>
-					<tr>
-						<td>first column</td>
-						<td>second column</td>
-					</tr>
-					<tr>
-					</tr>
-				</tbody>
-			</table>
+			<h1>Bulldogs Gone Wild!</h1>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/EwPvcZ8Va_Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<ol>
+					<li>They are cool</li>
+					<li>They are chill</li>
+					<li>Ladies love them ;)</li>
+					<ul>
+						<li>Doubt that last one is true</li>
+					</ul>
+				</ol>
+				<br>
+			<img src="http://gaia.adage.com/images/bin/imgstore/work/full/g/e/i/Geico_RunningWiththeBulldogs17.jpg">
 		</p>
 	</body>
 </html>
