--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Bulldogs</title>
+		<title>C++ Tutorial</title>
 	</head>
 	<body>
+		<h1>Learn C++</h1>
+		<h2>The "Hello World" Example</h2>
 		<p>
-			<h1>Bulldogs Gone Wild!</h1>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/EwPvcZ8Va_Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-				<ol>
-					<li>They are cool</li>
-					<li>They are chill</li>
-					<li>Ladies love them ;)</li>
-					<ul>
-						<li>Doubt that last one is true</li>
-					</ul>
-				</ol>
-				<br>
-			<img src="http://gaia.adage.com/images/bin/imgstore/work/full/g/e/i/Geico_RunningWiththeBulldogs17.jpg">
+		To begin learing C++, we first need a place to write and run code. For now, 
+		we can just use an online complier and then download something on our PC in the 
+		later future. <a href="https://www.onlinegdb.com/online_c++_compiler" target="_blank">Click here</a>
+		to get to the online compiler. A compiler is something that makes your code runnable by the computer.
+		Now, we can take a look at the program that is there by default.
 		</p>
+		<img src="./onlinecompiler.JPG" height="70%" width=55%/>
+		<p>
+		You should now be looking at something very similar to what's above. 
+		</p>
+				
 	</body>
 </html>
 	
