--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>C++ Tutorial</title>
+		<title>HTML Reference</title>
 	</head>
 	<body>
-		<h1>Learn C++</h1>
-		<h2>The "Hello World" Example</h2>
-		<p>
-		To begin learing C++, we first need a place to write and run code. For now, 
-		we can just use an online complier and then download something on our PC in the 
-		later future. <a href="https://www.onlinegdb.com/online_c++_compiler" target="_blank">Click here</a>
-		to get to the online compiler. A compiler is something that makes your code runnable by the computer.
-		Now, we can take a look at the program that is there by default.
-		</p>
-		<img src="./onlinecompiler.JPG" height="70%" width=55%/>
-		<p>
-		You should now be looking at something very similar to what's above. 
-		</p>
+		
+		
+		<a href="./pages/forms.html">Forms</a>
+		
+		
+		<h1>This site is for me to Brandon to for HTML, CSS, etc.</h1>
+		
+		
+		<!-- form -->
+		
+		
 				
 	</body>
 </html>
