--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<a href="./pages/forms.html">Forms</a>
 		
 		
-		<h1>This site is for me to Brandon to for HTML, CSS, etc.</h1>
+		<h1>This site is for Brandon to for HTML, CSS, etc.</h1>
 		
 		
 		<!-- form -->
