--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="icon"  type="image/png" href="./beagle.png">
 		<title>HTML Reference</title>
 	</head>
 	<body>
@@ -11,11 +12,9 @@
 		
 		<h1>This site is for Brandon to refer to for HTML, CSS, etc.</h1>
 		
+
 		
-		<!-- form -->
-		
-		
-				
+	
 	</body>
 </html>
 	
