--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="icon"  type="image/png" href="./beagle.png">
 		<title>HTML Reference</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		
@@ -10,7 +11,7 @@
 		<a href="./pages/forms.html">Forms</a>
 		
 		
-		<h1>This site is for Brandon to refer to for HTML, CSS, etc.</h1>
+		<h1 id="front">This site is for Brandon to refer to for HTML, CSS, etc.</h1>
 		
 
 		
