--- a/index.html
+++ b/index.html
@@ -1,48 +1,54 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="icon"  type="image/png" href="./beagle.png">
-		<title>HTML Reference</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-	</head>
-	<body>
-		
-		<div class="container">
-			<div class="page-header">
-				<h1>Using Bootstrap</h1>
-			</div>
-
-			<div class="jumbotron">
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-
-				<p>
-					<a type="button" href="./pages/forms.html" class="btn btn-default btn-lg" role="button">Forms</a>
-				</p>
-			</div>
-
-
+<head>
+	<title>Brandon's Bulldogs</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="icon"  type="image/png" href="./favicon2.png">
+</head>
+<body>
+	<header>
+		<div>
+			<a class="headerlogo" href="index.html">
+				<img src="bulldog.jpg">
+			</a>
+			<span class="headername">Brandon's Bulldogs</span>
+			<input type="search" class="searchbox" placeholder="Search our Site!">
 		</div>
-		
-		
-		
-		
-		<h1 id="front">This site is for Brandon to refer to for HTML, CSS, etc.</h1>
-		
+		<nav class="nav">
+			<a href="./pages/puppies.html" class="button">Puppies</a>
+			<a href="https://www.google.com/search?q=english+bulldogs&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiIu_O-5oPaAhWll-AKHdCcD3IQ_AUICigB&biw=1517&bih=653" class="button">Picture Gallery</a>
+			<a href="https://en.wikipedia.org/wiki/Bulldog" class="button">About Bulldogs</a>
+			<a href="http://dogtime.com/dog-breeds/french-bulldog#/slide/1" class="button">French Bulldogs</a>
+		</nav>
+	</header>
 
-		
+	<section class="onelayer">
+		<div>
+			<header class="welcometext">
+				<p>Welcome to Brandon's Bulldogs!</p>
+			</header>
+			<div >
+				<p id="paragraph">
+					Brandon's Bulldogs is a practice website to work on HTML, CSS, and Javascript. You can find all of the code at my github page linked in the "about" tab above. 
+					<br><br>
+					A Bulldog is a medium-sized breed of dog commonly referred to as the English Bulldog or British Bulldog. It is a muscular, hefty dog with a wrinkled face and a distinctive pushed-in nose.[4] The American Kennel Club (AKC), The Kennel Club (UK), and the United Kennel Club (UKC) oversee breeding records. The Bulldog Club of America[5] (BCA) maintains the standard of excellence for the guidance of breeders, owners and judges in the United States. Bulldogs were the fourth most popular purebred in the US in 2016 according to the American Kennel Club.[6]
+
+					Bulldogs have a longstanding association with British culture, as the BBC wrote: "to many the Bulldog is a national icon, symbolising pluck and determination."[7] During World War II, Bulldogs were often likened to Prime Minister Winston Churchill and his defiance of Nazi Germany.[8] When the English settled in the Americas, their Bulldogs came with them. A few dedicated bulldog fanciers formed the Bulldog Club of America in 1890 and it was incorporated under the laws of the State of New York on November 29, 1904.
+				</p>
+			</div>
+		</div>
+	</section>
+
+
+
+
+
+
+
+	<footer class="onelayer">
+		<p>This website was created as practice of HTML, CSS, and Javascript by Brandon Meier. Thanks for visiting!</p>
+	</footer>
+
 	
-
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	</body>
+</body>
 </html>
-	
