--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<a href="https://www.google.com/search?q=english+bulldogs&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiIu_O-5oPaAhWll-AKHdCcD3IQ_AUICigB&biw=1517&bih=653" class="button">Picture Gallery</a>
 			<a href="https://en.wikipedia.org/wiki/Bulldog" class="button">About Bulldogs</a>
 			<a href="http://dogtime.com/dog-breeds/french-bulldog#/slide/1" class="button">French Bulldogs</a>
-			<a href=""></a>
+			<a href="./pages/about.html" class="button">About</a>
 		</nav>
 	</header>
 
@@ -33,9 +33,9 @@
 				<p id="paragraph">
 					Brandon's Bulldogs is a practice website to work on HTML, CSS, and Javascript. You can find all of the code at my github page linked in the "about" tab above. 
 					<br><br>
-					A Bulldog is a medium-sized breed of dog commonly referred to as the English Bulldog or British Bulldog. It is a muscular, hefty dog with a wrinkled face and a distinctive pushed-in nose.[4] The American Kennel Club (AKC), The Kennel Club (UK), and the United Kennel Club (UKC) oversee breeding records. The Bulldog Club of America[5] (BCA) maintains the standard of excellence for the guidance of breeders, owners and judges in the United States. Bulldogs were the fourth most popular purebred in the US in 2016 according to the American Kennel Club.[6]
+					A Bulldog is a medium-sized breed of dog commonly referred to as the English Bulldog or British Bulldog. It is a muscular, hefty dog with a wrinkled face and a distinctive pushed-in nose. The American Kennel Club (AKC), The Kennel Club (UK), and the United Kennel Club (UKC) oversee breeding records. The Bulldog Club of America (BCA) maintains the standard of excellence for the guidance of breeders, owners and judges in the United States. Bulldogs were the fourth most popular purebred in the US in 2016 according to the American Kennel Club.
 
-					Bulldogs have a longstanding association with British culture, as the BBC wrote: "to many the Bulldog is a national icon, symbolising pluck and determination."[7] During World War II, Bulldogs were often likened to Prime Minister Winston Churchill and his defiance of Nazi Germany.[8] When the English settled in the Americas, their Bulldogs came with them. A few dedicated bulldog fanciers formed the Bulldog Club of America in 1890 and it was incorporated under the laws of the State of New York on November 29, 1904.
+					Bulldogs have a longstanding association with British culture, as the BBC wrote: "to many the Bulldog is a national icon, symbolising pluck and determination." During World War II, Bulldogs were often likened to Prime Minister Winston Churchill and his defiance of Nazi Germany.When the English settled in the Americas, their Bulldogs came with them. A few dedicated bulldog fanciers formed the Bulldog Club of America in 1890 and it was incorporated under the laws of the State of New York on November 29, 1904.
 				</p>
 			</div>
 		</div>
