--- a/pages/about.html
+++ b/pages/about.html
@@ -6,6 +6,34 @@
 	<link rel="icon"  type="image/png" href="../favicon2.png">
 </head>
 <body>
+	<header>
+		<div>
+			<a class="headerlogo" href="../index.html">
+				<img src="../bulldog.jpg">
+			</a>
+			<span class="headername">Brandon's Bulldogs</span>
+			<input type="search" class="searchbox" placeholder="Search our Site!">
+		</div>
+		<nav class="nav">
+			<a href="./puppies.html" class="button">Puppies</a>
+			<a href="https://www.google.com/search?q=english+bulldogs&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiIu_O-5oPaAhWll-AKHdCcD3IQ_AUICigB&biw=1517&bih=653" class="button">Picture Gallery</a>
+			<a href="https://en.wikipedia.org/wiki/Bulldog" class="button">About Bulldogs</a>
+			<a href="http://dogtime.com/dog-breeds/french-bulldog#/slide/1" class="button">French Bulldogs</a>
+			<a href="./about.html" class="button">About</a>
+		</nav>
+	</header>
+
+	<section class="onelayer">
+		<div>
+			<header class="welcometext">
+				<p>About Brandon's Bulldogs</p>
+			</header>
+			<div>
+				
+			</div>
+		</div>
+		
+	</section>
 
 </body>
 </html>
