--- a/pages/about.html
+++ b/pages/about.html
@@ -29,7 +29,10 @@
 				<p>About Brandon's Bulldogs</p>
 			</header>
 			<div>
-				
+				<p class="paragraph">Feel free to check out the code of this website from my Github repository!
+					<br>
+				<a href="https://github.com/bsm52/bsm52.github.io">Click here to go there!</a>
+				</p>
 			</div>
 		</div>
 		
