--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
 		<nav class="nav">
 			<a href="./puppies.html" class="button">Puppies</a>
 			<a href="https://www.google.com/search?q=english+bulldogs&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiIu_O-5oPaAhWll-AKHdCcD3IQ_AUICigB&biw=1517&bih=653" class="button">Picture Gallery</a>
-			<a href="https://en.wikipedia.org/wiki/Bulldog" class="button">About Bulldogs</a>
+			<a href="https://en.wikipedia.org/wiki/Bulldog" class="button">Bulldog Wiki</a>
 			<a href="http://dogtime.com/dog-breeds/french-bulldog#/slide/1" class="button">French Bulldogs</a>
 			<a href="./about.html" class="button">About</a>
 		</nav>
