--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 	</header>
 
 	<section class="onelayer">
-		<div>
 			<header class="welcometext">
 				<p>Welcome to Brandon's Bulldogs!</p>
 			</header>
@@ -39,8 +38,22 @@
 					Bulldogs have a longstanding association with British culture, as the BBC wrote: "to many the Bulldog is a national icon, symbolising pluck and determination." During World War II, Bulldogs were often likened to Prime Minister Winston Churchill and his defiance of Nazi Germany.When the English settled in the Americas, their Bulldogs came with them. A few dedicated bulldog fanciers formed the Bulldog Club of America in 1890 and it was incorporated under the laws of the State of New York on November 29, 1904.
 				</p>
 			</div>
-		</div>
+			<div>
+				<header class="welcometext">
+					<p>The History of Bulldogs</p>
+				</header>
+				<div>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/3YWRHIJ3MIk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<p class="paragraph">
+						The term "Bulldog" was first mentioned in literature around 1500, the oldest spelling of the word being Bondogge and Bolddogge. The first reference to the word with the modern spelling is dated 1631 or 1632 in a letter by a man named Preswick Eaton where he writes: "procuer mee two good Bulldogs, and let them be sent by ye first shipp".[14] In 1666, English scientist Christopher Merret applied: "Canis pugnax, a Butchers Bull or Bear Dog", as an entry in his Pinax Rerum Naturalium Britannicarum.[15]
+						<br>
+						The designation "bull" was applied because of the dog's use in the sport of bull baiting. This entailed the setting of dogs (after placing wagers on each dog) onto a tethered bull. The dog that grabbed the bull by the nose and pinned it to the ground would be the victor. It was common for a bull to maim or kill several dogs at such an event, either by goring, tossing, or trampling. Over the centuries, dogs used for bull-baiting developed the stocky bodies and massive heads and jaws that typify the breed as well as a ferocious and savage temperament. Bull-baiting, along with bear-baiting, reached the peak of its popularity in England in the early 1800s until they were both made illegal by the Cruelty to Animals Act 1835. This amended the existing legislation to protect animals from mistreatment and included (as "cattle") snakes, dogs, owls, and donkeys, so that bull and bear-baiting as well as cockfighting became prohibited. Therefore, the Old English Bulldog had outlived its usefulness in England as a sporting animal and its active or "working" days were numbered. However, emigrants did have a use for such dogs in the New World. In mid-17th century New York, Bulldogs were used as a part of a citywide roundup effort led by Governor Richard Nicolls. Because cornering and leading wild bulls were dangerous, Bulldogs were trained to seize a bull by its nose long enough for a rope to be secured around its neck.[16] Bulldogs as pets were continually promoted by dog dealer Bill George.[17]
+						
+					</p>
+				</div>
+			</div>
 	</section>
+
 
 
 
