--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About</title>
+	<title>Contact Us</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<link rel="icon"  type="image/png" href="../favicon2.png">
 </head>
@@ -19,22 +19,22 @@
 			<a href="https://www.google.com/search?q=english+bulldogs&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiIu_O-5oPaAhWll-AKHdCcD3IQ_AUICigB&biw=1517&bih=653" class="button">Picture Gallery</a>
 			<a href="https://en.wikipedia.org/wiki/Bulldog" class="button">Bulldog Wiki</a>
 			<a href="http://dogtime.com/dog-breeds/french-bulldog#/slide/1" class="button">French Bulldogs</a>
-			<a href="./about.html" class="button">About</a>
+			<a href="about.html" class="button">About</a>
 			<a href="./contact.html" class="button">Contact Us</a>
 		</nav>
 	</header>
 
 	<section class="onelayer">
 		<div>
-			<header class="welcometext">
-				<p>About Brandon's Bulldogs</p>
-			</header>
-			<div>
-				<p class="paragraph">Feel free to check out the code of this website from my Github repository!
-					<br>
-				<a href="https://github.com/bsm52/bsm52.github.io">Click here to go there!</a>
-				</p>
-			</div>
+			<header class="welcometext">We Would Love to Hear From You!</header>
+		</div>
+		<div>
+			<form>
+				<input type="text" name="firstname" placeholder="First Name"><br>
+				<input type="text" name="lastname" placeholder="Last Name"><br>
+				<input type="email" name="email" placeholder="Your Email Address"><br>
+				<input class="submit" type="submit" value="submit" name="submit">
+			</form>
 		</div>
 		
 	</section>
