--- a/pages/puppies.html
+++ b/pages/puppies.html
@@ -20,6 +20,7 @@
 			<a href="https://en.wikipedia.org/wiki/Bulldog" class="button">Bulldog Wiki</a>
 			<a href="http://dogtime.com/dog-breeds/french-bulldog#/slide/1" class="button">French Bulldogs</a>
 			<a href="about.html" class="button">About</a>
+			<a href="./contact.html" class="button">Contact Us</a>
 		</nav>
 	</header>
 
