--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon"  type="image/png" href="./favicon2.png">
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
 	<header>
 		<div>
